Add containers to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     </head>
 
     <body>
+        <div class="header">
+            <div class="homebar">
+
+            </div>
+            <div class="headercontent">
+
+            </div>
+        </div>
+        <div class="maincontent">
+            <div class="info">
+
+            </div>
+            <div class="quote">
+
+            </div>
+            <div class="signup">
+                
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
 
     </body>
 </html>
