Add basic header formatting and content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <body>
         <div class="header">
             <div class="homebar">
-
+                <img class="headerlogo" src="/images/headerlogo.jpg" alt="logo image of lake and mountain">
+                <p>LOGO</p>
+                <ul class="headerlinks">
+                    <li>Header 1</li>
+                    <li>Header 2</li>
+                    <li>Header 3</li>
+                </ul>
             </div>
             <div class="headercontent">
 
