Add content and style header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <body>
         <div class="header">
             <div class="homebar">
-                <img class="headerlogo" src="/images/headerlogo.jpg" alt="logo image of lake and mountain">
                 <p>LOGO</p>
                 <ul class="headerlinks">
                     <li>Header 1</li>
@@ -19,7 +18,14 @@
                 </ul>
             </div>
             <div class="headercontent">
-
+                <div class="headertext">
+                    <h1>Who doesn't love landscapes!</h1>
+                    <p>Take a look at the beautiful landscapes on display. Want to be notified of more? Sign up!</p>
+                    <button type="button">Sign Up</button>
+                </div>
+                <div class="headerlogocontainer">
+                    <img class="headerlogo" src="/images/headerlogo.jpg" alt="logo image of lake and mountain">
+                </div>
             </div>
         </div>
         <div class="maincontent">
