add images, format header, and add info section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,24 @@
             </div>
         </div>
         <div class="maincontent">
+            <div class="infoheader"><p>Landscape Images</p></div>
             <div class="info">
-
+                <div class="card">
+                    <img src="/images/dusk.jpg" alt="image of tree in a dusk setting providing a dark red tone">
+                    <p>Tree at Dusk</p>
+                </div>
+                <div class="card">
+                    <img src="/images/lighthouse.jpg" alt="image of lighthouse on cliffside of the sea">
+                    <p>Cliffside Lighthouse</p>
+                </div>
+                <div class="card">
+                    <img src="/images/mountains.jpg" alt="image of snow cap mountains and pink flowers and a pink leaf tree">
+                    <p>Mountain Flower Meadow</p>
+                </div>
+                <div class="card">
+                    <img src="images/river.jpg" alt="image of a green river flowing through trees">
+                    <p>Wooded River</p>
+                </div>
             </div>
             <div class="quote">
 
