--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 </div>
             </div>
             <div class="quote">
-
+                <p class="quotetext">“Think of all the beauty still left around you and be happy.”</p>
+                <p class="quoteauthor">-Anne Frank</p>
             </div>
             <div class="signup">
                 
