--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="footer">
-
+            <p>Copyright © The Odin Project 2023</p>
         </div>
 
     </body>
