--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
             <div class="infoheader"><p>Landscape Images</p></div>
             <div class="info">
                 <div class="card">
-                    <img src="/images/dusk.jpg" alt="image of tree in a dusk setting providing a dark red tone">
+                    <img src="./images/dusk.jpg" alt="image of tree in a dusk setting providing a dark red tone">
                     <p>Tree at Dusk</p>
                 </div>
                 <div class="card">
-                    <img src="/images/lighthouse.jpg" alt="image of lighthouse on cliffside of the sea">
+                    <img src="./images/lighthouse.jpg" alt="image of lighthouse on cliffside of the sea">
                     <p>Cliffside Lighthouse</p>
                 </div>
                 <div class="card">
-                    <img src="/images/mountains.jpg" alt="image of snow cap mountains and pink flowers and a pink leaf tree">
+                    <img src="./images/mountains.jpg" alt="image of snow cap mountains and pink flowers and a pink leaf tree">
                     <p>Mountain Flower Meadow</p>
                 </div>
                 <div class="card">
-                    <img src="images/river.jpg" alt="image of a green river flowing through trees">
+                    <img src="./images/river.jpg" alt="image of a green river flowing through trees">
                     <p>Wooded River</p>
                 </div>
             </div>
