Fix header image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <button type="button">Sign Up</button>
                 </div>
                 <div class="headerlogocontainer">
-                    <img class="headerlogo" src="/images/headerlogo.jpg" alt="logo image of lake and mountain">
+                    <img class="headerlogo" src="./images/headerlogo.jpg" alt="logo image of lake and mountain">
                 </div>
             </div>
         </div>
